--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			property="og:image"
 			content="https://live.staticflickr.com/65535/54272224071_4388d2d561_m.jpg"
 		/>
-		<meta property="og:url" content="https://www.mediaone.ng" />
+		<meta property="og:url" content="https://www.Crochetelo.com" />
 		<meta property="og:type" content="website" />
 
 		<meta name="twitter:card" content="summary_large_image" />
@@ -43,16 +43,18 @@
 			content="https://live.staticflickr.com/65535/54272224071_4388d2d561_m.jpg"
 		/>
 
-		<link rel="canonical" href="https://www.mediaone.ng" />
+		<link rel="canonical" href="https://www.Crochetelo.com" />
 
 		<meta name="robots" content="index, follow" />
 
 <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "Organization",
+		"author": { "@type": "Person", "name": "Yewande" },
+    "@type": "Ecommerce",
+		"headline": "Handmade Crochet Outfits",
     "name": "CROCHETELO",
-    "url": "https://www.mediaone.ng",
+    "url": "https://www.Crochetelo.com",
     "logo": "https://live.staticflickr.com/65535/54252598239_b2f0a9ac98_k.jpg",
     "sameAs": [
       "https://www.instagram.com/crochetelo_/",
