--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		/>
 		<meta
 			property="og:image"
-			content="https://live.staticflickr.com/65535/54272224071_4388d2d561_m.jpg"
+			content="https://res.cloudinary.com/dt1vxscki/image/upload/v1737427565/crochetelo_web_vvol48.webp"
 		/>
 		<meta property="og:url" content="https://www.Crochetelo.com" />
 		<meta property="og:type" content="website" />
@@ -40,7 +40,7 @@
 		/>
 		<meta
 			name="twitter:image"
-			content="https://live.staticflickr.com/65535/54272224071_4388d2d561_m.jpg"
+			content="https://res.cloudinary.com/dt1vxscki/image/upload/v1737427565/crochetelo_web_vvol48.webp"
 		/>
 
 		<link rel="canonical" href="https://www.Crochetelo.com" />
@@ -55,7 +55,7 @@
 		"headline": "Handmade Crochet Outfits",
     "name": "CROCHETELO",
     "url": "https://www.Crochetelo.com",
-    "logo": "https://live.staticflickr.com/65535/54252598239_b2f0a9ac98_k.jpg",
+    "logo": "https://res.cloudinary.com/dt1vxscki/image/upload/v1737427565/crochetelo_web_vvol48.webp",
     "sameAs": [
       "https://www.instagram.com/crochetelo_/",
       "https://x.com/Crochetelo_",
