--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
 		<meta
 			name="description"
-			content="Crochetélo is a crochet fashion that creates unique hand crafted designs for men and women that wants to stand out."
+			content="Crochetélo is a crochet fashion brand store that creates unique hand crafted designs for men and women that wants to stand out."
 		/>
 
 		<meta property="og:title" content="CROCHETELO - Handmade Crochet Outfits" />
 		<meta
 			property="og:description"
-			content="Crochetélo is a crochet fashion that creates unique hand crafted designs for men and women that wants to stand out."
+			content="Crochetélo is a crochet fashion brand store that creates unique hand crafted designs for men and women that wants to stand out."
 		/>
 		<meta
 			property="og:image"
@@ -36,7 +36,7 @@
 		<meta name="twitter:title" content="CROCHETELO - Handmade Crochet Outfits" />
 		<meta
 			name="twitter:description"
-			content="Crochetélo is a crochet fashion that creates unique hand crafted designs for men and women that wants to stand out."
+			content="Crochetélo is a crochet fashion brand store that creates unique hand crafted designs for men and women that wants to stand out."
 		/>
 		<meta
 			name="twitter:image"
