--- a/index.html
+++ b/index.html
@@ -48,23 +48,27 @@
 		<meta name="robots" content="index, follow" />
 
 <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-		"author": { "@type": "Person", "name": "Yewande" },
-    "@type": "Ecommerce",
-		"headline": "Handmade Crochet Outfits",
-    "name": "CROCHETELO",
-    "url": "https://www.Crochetelo.com",
-    "logo": "https://res.cloudinary.com/dt1vxscki/image/upload/v1737427565/crochetelo_web_vvol48.webp",
-    "sameAs": [
-      "https://www.instagram.com/crochetelo_/",
-      "https://x.com/Crochetelo_",
-      "https://www.youtube.com/@Crochetelo",
-      "https://www.threads.net/@crochetelo_",
-      "https://www.facebook.com/crochetelo",
-    ]
-  }
+{
+  "@context": "https://schema.org",
+  "@type": "Store",
+  "name": "CROCHETELO",
+  "url": "https://www.crochetelo.com",
+  "logo": "https://res.cloudinary.com/dt1vxscki/image/upload/v1737427565/crochetelo_web_vvol48.webp",
+  "description": "Handmade Crochet Outfits",
+  "founder": { 
+    "@type": "Person", 
+    "name": "Ashiwaju Yewande" 
+  },
+  "sameAs": [
+    "https://www.instagram.com/crochetelo_/",
+    "https://x.com/Crochetelo_",
+    "https://www.youtube.com/@Crochetelo",
+    "https://www.threads.net/@crochetelo_",
+    "https://www.facebook.com/crochetelo"
+  ]
+}
 </script>
+
 
 	</head>
 	<body>
