--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
@@ -33,7 +31,10 @@
 		<meta property="og:type" content="website" />
 
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:title" content="CROCHETELO - Handmade Crochet Outfits" />
+		<meta
+			name="twitter:title"
+			content="CROCHETELO - Handmade Crochet Outfits"
+		/>
 		<meta
 			name="twitter:description"
 			content="Crochetélo is a crochet fashion brand store that creates unique hand crafted designs for men and women that wants to stand out."
@@ -47,29 +48,39 @@
 
 		<meta name="robots" content="index, follow" />
 
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Store",
-  "name": "CROCHETELO",
-  "url": "https://www.crochetelo.com",
-  "logo": "https://res.cloudinary.com/dt1vxscki/image/upload/v1737427565/crochetelo_web_vvol48.webp",
-  "description": "Handmade Crochet Outfits",
-  "founder": { 
-    "@type": "Person", 
-    "name": "Ashiwaju Yewande" 
-  },
-  "sameAs": [
-    "https://www.instagram.com/crochetelo_/",
-    "https://x.com/Crochetelo_",
-    "https://www.youtube.com/@Crochetelo",
-    "https://www.threads.net/@crochetelo_",
-    "https://www.facebook.com/crochetelo"
-  ]
-}
-</script>
-
-
+		<script type="application/ld+json">
+			{
+				"@context": "https://schema.org",
+				"@type": "Store",
+				"name": "CROCHETELO",
+				"url": "https://www.crochetelo.com",
+				"logo": "https://res.cloudinary.com/dt1vxscki/image/upload/v1737427565/crochetelo_web_vvol48.webp",
+				"image": "https://res.cloudinary.com/dt1vxscki/image/upload/v1737427565/crochetelo_web_vvol48.webp",
+				"description": "Handmade Crochet Outfits",
+				"founder": {
+					"@type": "Person",
+					"name": "Yewande"
+				},
+				"address": {
+					"@type": "PostalAddress",
+					"streetAddress": "Rehoboth Apartment, Agbowo, Ibadan",
+					"addressLocality": "Ibadan",
+					"addressRegion": "Oyo",
+					"postalCode": "200213",
+					"addressCountry": "NG"
+				},
+				"telephone": "+2348158999886",
+				"email": "contact@crochetelo.com",
+				"priceRange": "$$ - $$$ (USD) / ₦₦ - ₦₦₦ (NGN) / €€ - €€€ (EUR)",
+				"sameAs": [
+					"https://www.instagram.com/crochetelo_/",
+					"https://x.com/Crochetelo_",
+					"https://www.youtube.com/@Crochetelo",
+					"https://www.threads.net/@crochetelo_",
+					"https://www.facebook.com/crochetelo"
+				]
+			}
+		</script>
 	</head>
 	<body>
 		<div id="root"></div>
